force-app/main/default/objects/agrid__Listview_Personalization__c/agrid__Listview_Personalization__c.object-meta.xml
<CustomObject>
    <label>Listview Personalization</label>
    <nameField>
        <displayFormat>PER-{0000}</displayFormat>
        <label>Listview Personalization Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Listview Personalizations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>