force-app/main/default/objects/agrid__Listview_Personalization__c/fields/agrid__Base_Configuration__c.field-meta.xml
<CustomField>
    <fullName>agrid__Base_Configuration__c</fullName>
    <label>Base Configuration</label>
    <referenceTo>agrid__Configuration__c</referenceTo>
    <relationshipLabel>Listview Personalizations</relationshipLabel>
    <relationshipName>Listview_Personalizations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>