force-app/main/default/objects/agrid__Listview_Personalization__c/fields/agrid__Config__c.field-meta.xml
<CustomField>
    <fullName>agrid__Config__c</fullName>
    <label>Config</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>