force-app/main/default/objects/agrid__Listview_Personalization__c/fields/agrid__Configuration_Group__c.field-meta.xml
<CustomField>
    <fullName>agrid__Configuration_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Configuration Group</label>
    <referenceTo>agrid__Configuration_Group__c</referenceTo>
    <relationshipLabel>Listview Personalizations</relationshipLabel>
    <relationshipName>Listview_Personalizations</relationshipName>
    <type>Lookup</type>
</CustomField>