force-app/main/default/objects/agrid__Listview_Personalization__c/fields/agrid__Preferences__c.field-meta.xml
<CustomField>
    <fullName>agrid__Preferences__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Preferences</label>
    <referenceTo>agrid__Configuration__c</referenceTo>
    <relationshipLabel>Listview Personalizations (Preferences)</relationshipLabel>
    <relationshipName>Listview_Personalizations1</relationshipName>
    <type>Lookup</type>
</CustomField>