force-app/main/default/objects/agrid__Listview_Personalization__c/fields/agrid__Type__c.field-meta.xml
<CustomField>
    <fullName>agrid__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Configuration Personalization</fullName>
            </value>
            <value>
                <fullName>Preference Personalization</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>